[gd_scene load_steps=9 format=3 uid="uid://x3glch3d052e"]

[ext_resource type="Script" path="res://Script/UI/setting.gd" id="1_aighs"]
[ext_resource type="Texture2D" uid="uid://c406h4frsnnit" path="res://Assets/UI/Main Meunu/bgmenu.png" id="1_bngx5"]
[ext_resource type="AudioStream" uid="uid://dhfiwljxlcsdw" path="res://Assets/BGM/Plain_Sight_(Regular).wav" id="3_cckdp"]
[ext_resource type="Texture2D" uid="uid://3mem0q7xrpw" path="res://Assets/UI/lineLight15.png" id="3_hvbti"]
[ext_resource type="Texture2D" uid="uid://iykqtfqlj4bp" path="res://Assets/UI/lineLight17.png" id="4_2t2ov"]
[ext_resource type="Texture2D" uid="uid://c3d64548pqciy" path="res://Assets/UI/lineLight13.png" id="5_aw4km"]
[ext_resource type="Texture2D" uid="uid://fw45c8nsi145" path="res://Assets/UI/lineLight11.png" id="6_5mwqf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1xvb0"]
texture = ExtResource("1_bngx5")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aighs")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1xvb0")

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="BGM" type="CheckBox" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("3_hvbti")
theme_override_icons/unchecked = ExtResource("4_2t2ov")
text = "Music Background"

[node name="SFX" type="CheckBox" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("6_5mwqf")
theme_override_icons/unchecked = ExtResource("5_aw4km")
text = "Sound Effects"

[node name="Button" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cckdp")
autoplay = true
bus = &"BGM"

[connection signal="toggled" from="Panel/CenterContainer/VBoxContainer/BGM" to="." method="_on_bgm_toggled"]
[connection signal="toggled" from="Panel/CenterContainer/VBoxContainer/SFX" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
